# x402mail

./: LICENSE  README.md  pyproject.toml
src/x402mail/: __init__.py  cli.py  client.py  mcp_server.py
tests/: test_client.py  test_mcp_server.py
