[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x402mail"
version = "0.2.5"
description = "Send and receive emails with crypto micropayments via x402"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "x402mail" }]
keywords = ["email", "x402", "crypto", "micropayments", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
]
dependencies = [
    "x402[evm]>=2.0.0",
    "requests>=2.28.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
cdp = ["cdp-sdk>=1.0.0"]

[project.scripts]
x402mail = "x402mail.cli:main"

[project.urls]
Homepage = "https://x402mail.com"
Documentation = "https://x402mail.com/docs"
